--- a/package.json
+++ b/package.json
@@ -6,13 +6,20 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
+    "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "grid": "^3.3.7",
+    "gridfs-stream": "^1.1.1",
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
     "mongoose": "^5.3.15",
     "morgan": "~1.9.0",
-    "nodemon": "^1.18.7"
+    "multer": "^1.4.1",
+    "multer-gridfs-storage": "^3.2.3",
+    "nodemon": "^1.18.7",
+    "path": "^0.12.7"
   }
 }
