--- a/package.json
+++ b/package.json
@@ -6,21 +6,27 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "alert-node": "^1.2.2",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "connect-mongo": "^2.0.1",
+    "consolidate": "^0.15.1",
     "cookie-parser": "~1.4.3",
-    "crypto": "^1.0.1",
     "debug": "~2.6.9",
+    "dialog": "^0.3.1",
+    "ejs": "^2.6.1",
     "express": "~4.16.0",
-    "grid": "^3.3.7",
-    "gridfs": "^1.0.0",
+    "express-session": "^1.15.6",
     "gridfs-stream": "^1.1.1",
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
-    "mongoose": "^5.3.15",
+    "method-override": "^3.0.0",
+    "mongodb": "^3.1.8",
+    "mongoose": "^5.3.8",
     "morgan": "~1.9.0",
     "multer": "^1.4.1",
     "multer-gridfs-storage": "^3.2.3",
-    "nodemon": "^1.18.7",
-    "path": "^0.12.7"
+    "sweetalert": "^2.1.2",
+    "swig": "^1.4.2"
   }
 }
